Gutter bottom issue fix on overflow of trans-view (#96)
* Gutter bottom issue fix on overflow

* minor semicolon removed

--- a/src/components/blockexplorer/style.less
+++ b/src/components/blockexplorer/style.less
@@ -26,4 +26,5 @@
 .transactionlogPanel {
     height: 100%;
     overflow-y: auto;
+    padding-bottom: 110px;
 }
